# Copia-backeend-novo-2.0

./: .env_exemplo  fabidecor.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
fabidecor/migrations/: 0007_produto_imagens.py  0008_remove_produto_imagens_produto_cover.py  0009_remove_produto_cover.py  0010_produto_capa.py
fabidecor/models/: produto.py
fabidecor/serializers/: produto.py
fabidecor/views/: categoria.py
media/images/: 04cc0dc2-df62-45b1-ae12-2d548a987352  30c8033e-0854-43bb-b1c0-0aa034efe6f7  c89d92f9-e768-4b02-9058-cdf141980a97
